# ChangeLog for media-fonts/ja-ipafonts
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/ja-ipafonts/ChangeLog,v 1.12 2009/01/19 14:18:42 matsuu Exp $

  19 Jan 2009; MATSUU Takuto <matsuu@gentoo.org> ja-ipafonts-002.03.ebuild:
  Changed SRC_URI.

*ja-ipafonts-002.03 (20 Sep 2008)

  20 Sep 2008; MATSUU Takuto <matsuu@gentoo.org> +ja-ipafonts-002.03.ebuild:
  Version bumped. Fixed HOMEPAGE and SRC_URI.

  15 Jan 2008; Fabian Groffen <grobian@gentoo.org>
  ja-ipafonts-0.0.20040715.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
  ja-ipafonts-0.0.20040715.ebuild:
  (QA) RESTRICT clean up.

  26 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  ja-ipafonts-0.0.20040715.ebuild:
  Add ~x86-fbsd keyword, restrict binchecks and strip.

  11 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  ja-ipafonts-0.0.20040715.ebuild:
  Mark 0.0.20040715 stable on ia64

  15 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>
  ja-ipafonts-0.0.20040715.ebuild:
  Marked stable on amd64.

  24 Apr 2005; Diego Pettenò <flameeyes@gentoo.org>
  ja-ipafonts-0.0.20040715.ebuild:
  Marked ~amd64.

  26 Oct 2004; Tom Gall <tgall@gentoo.org> ja-ipafonts-0.0.20040715.ebuild:
  stable on ppc64, bug #66885

  06 Oct 2004; Mamoru KOMACHI <usata@gentoo.org>
  ja-ipafonts-0.0.20040715.ebuild:
  Added to ~ppc-macos.

  29 Sep 2004; Mamoru KOMACHI <usata@gentoo.org>
  ja-ipafonts-0.0.20040715.ebuild:
  Stable on x86, ppc and alpha.

*ja-ipafonts-0.0.20040715 (12 Aug 2004)

  12 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> +metadata.xml,
  +ja-ipafonts-0.0.20040715.ebuild:
  Initial import. Ebuild provided by Kenichi Ishibashi
  <bashi@dream.ie.ariake-nct.ac.jp>.
