@@ -1,6 +1,8 @@
 DIST IPAfont00203.zip 16045502 RMD160 26ea0efe725558bc3e5e6dff66264cee0f6fb5a5 SHA1 8d7d3e0c0511427dd94b52eebb554ad6108d10ca SHA256 ab6799af23903c1ee180e9c784d0b32b4f0b140f28df6980bdb0294f396c6a9e
+DIST IPAfont00301.zip 10255237 RMD160 b9721e4ed1407f5d0ac15b36f9373bb17a10d58e SHA1 daf12bb74ce72ec7919a3ab9e31a16d0abb95f7d SHA256 f3df7527dec37e1d8fcd34c5e0b46797372321f4a0ba15b902a145f78bd7e4cc
 DIST grass5.0.3_i686-pc-linux-i18n-ipafull-gnu_bin.tar.gz 47275548 RMD160 99416e08ca352938146c7390d5f3d08779d0fd88 SHA1 fefcc248caa6593c76104606d4c58a2f2889d95b SHA256 484f22c9ae7d003c9c7401e93c5adf157112aa1cb890f8945f92982582d7644d
 EBUILD ja-ipafonts-0.0.20040715.ebuild 834 RMD160 f04a213007f2f2e8d42f5152259581652dd16ef3 SHA1 bd733ee938ab09f453e17a67fd4c3a0d7a62aed1 SHA256 9a01ffe51127363e963cddf810a288268a53536ba9500be40bb4b3559922767f
-EBUILD ja-ipafonts-002.03.ebuild 727 RMD160 79e5237d660f05ca84e74228b4c79484ff9b8929 SHA1 af9e40cb1e24c8c4978b049a465a81a24a1b9fd5 SHA256 da496c1a035b86c6ab6dc986b234f2f76d692388e4e60980233641728d3de1b0
-MISC ChangeLog 1776 RMD160 df68627a0565524f2bb8f43935677a312a2c0f29 SHA1 95b7d20c103cb6c421ced37d64c9f18484795ed9 SHA256 ef5443028d71cf3280dfe390727498034caf4e31ca09a512459e09142a9441dc
+EBUILD ja-ipafonts-002.03.ebuild 727 RMD160 ee5902f7d5f4f36da6fa516634c0893020458476 SHA1 2773ff34020ca4cdebcb3316bfb00813b1b09e20 SHA256 d6bff46eb4213341334537f03417327c7de6c68fc7806a845f2e52639da65a59
+EBUILD ja-ipafonts-003.01.ebuild 720 RMD160 f342eaa69f35536a8f79b1e6ceacec9e3d9aac59 SHA1 c2747565281fa84ff4ed0f48f099c0503eba8a83 SHA256 3595789638cd4ed46cd6da5c3adc1bff97297d37c242dda7a2cf861261e0e1b7
+MISC ChangeLog 2085 RMD160 f2a3c7c7cb8738be7acdb0678b4925f773ddcc97 SHA1 1d388e45506b7ee2faefae85e2c290cdf82e607b SHA256 a7b7ad9a392c61c796bc84c2d89f1b17f917d0dc79453236d2c924dedc8665d3
 MISC metadata.xml 175 RMD160 4be49b8c0297a54a570715005c60f91a178807bf SHA1 80dc294bed90807462c2ef2bb5d8229a9b708f47 SHA256 5c2b5892c4a52e0f1585a34ed70e94042c3684a5f1021f077b2c5756d51120ce
