@@ -1,6 +1,15 @@
 # ChangeLog for media-fonts/ja-ipafonts
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/ja-ipafonts/ChangeLog,v 1.12 2009/01/19 14:18:42 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/ja-ipafonts/ChangeLog,v 1.14 2009/04/21 17:02:50 matsuu Exp $
+
+  21 Apr 2009; MATSUU Takuto <matsuu@gentoo.org> +ja-ipafonts-002.03.ebuild:
+  Revert old version.
+
+*ja-ipafonts-003.01 (20 Apr 2009)
+
+  20 Apr 2009; MATSUU Takuto <matsuu@gentoo.org> -ja-ipafonts-002.03.ebuild,
+  +ja-ipafonts-003.01.ebuild:
+  Version bumped. Removed RESTRICT="mirror". Removed old version.
 
   19 Jan 2009; MATSUU Takuto <matsuu@gentoo.org> ja-ipafonts-002.03.ebuild:
   Changed SRC_URI.
